# dead-simple-agent

./: .env.example  .gitignore  README.md  providers.py  pyproject.toml  qwen-run.py  run.py  sessions.py  system_prompt.md  test.py  tools.py
agent/: __init__.py  bgipfs.py  core.py  debuglog.py  default_prompt.md  jobs.py  leftclaw.py  providers.py  sessions.py  subagent.py  tools.py
dead_simple_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
