[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dead-simple-agent"
version = "0.1.0"
description = "A local AI agent in ~1000 lines of Python. No frameworks, no abstractions."
requires-python = ">=3.8"
dependencies = ["requests"]

[project.scripts]
dead-simple-agent = "agent.core:_cli_entry"

[tool.setuptools]
packages = ["agent"]

[tool.setuptools.package-data]
agent = ["*.md"]
